Tidy up some collections code
by using the newer factory methods, which conserves precious
characters.