@@ -15,7 +15,6 @@ import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -31,7 +30,7 @@ public class MockAction implements LifecycleAction {
     }
 
     public MockAction() {
-        this(Collections.emptyList());
+        this(List.of());
     }
 
     public MockAction(List<Step> steps) {
